# Tkabber-pack

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  README.md  TODO  bootstrap.tcl  configure  configure.ac  info-after-en.txt  info-after-en.txt.in  info-after-ru.txt  info-after-ru.txt.in  license-en.txt  license-ru.txt  tkabber-pack.iss
.github/workflows/: main.yml
doc/: ChangeLog  tkabber.url  wiki.url
doc/licenses/: README.txt  tclmore&ztcl.license
src/: Makefile
src/defs/: common.mak  common.mak.in  defs.mak  defs.mak.in  shared.mak  shared.mak.in  tools.mak
src/md5sums/: Memchan2.3.tar.gz.md5  Memchan2.3.tar.gz.sha256  bwidget-1.9.14.tar.gz.md5  bwidget-1.9.14.tar.gz.sha256  bwidget-1.9.7.tar.gz.md5  libressl-3.0.2.tar.gz.sha1  ming.zip.md5  openssl-1.0.1f.tar.gz.md5  openssl-1.0.1g.tar.gz.sha1  openssl-1.0.1j.tar.gz.sha1  openssl-1.0.1m.tar.gz.sha1  snack2.2.10.tar.gz.md5  snack2.2.10.tar.gz.sha256  tDOM-0.8.3-git.tgz.md5  tcl8.6.1-src.tar.gz.md5  tcl8.6.10-src.tar.gz.md5  tcl8.6.3-src.tar.gz.md5  tcl8.6.4-src.tar.gz.md5  tcllib-1.15.tar.gz.md5  tcllib-1.16.tar.gz.md5  tcllib-1.20.tar.gz.md5  tcllib-1.20.tar.gz.sha256  tcludp-1.0.11.tar.gz.md5  tcludp-1.0.11.tar.gz.sha256  tcludp-1.0.8.tar.gz.md5  tclvfs-1.4.2.tar.gz.md5  tk8.6.1-src.tar.gz.md5  tk8.6.10-src.tar.gz.md5  tk8.6.3-src.tar.gz.md5  tk8.6.4-src.tar.gz.md5  tkabber-1.1.1.tar.xz.sha256  tkabber-1.1.2.tar.xz.sha256  tkabber-1.1.tar.xz.sha256  tkabber-plugins-1.1.1.tar.xz.sha256  tkabber-plugins-1.1.2.tar.xz.sha256  tkabber-plugins-1.1.tar.xz.sha256  tkcon-2.5.tar.gz.md5  tkcon-2.5.tar.gz.sha256  tkhtml-2.0-src.tar.gz.md5  tkimg-svn-r137.tar.gz.md5  (+16 more)
src/patches/: libressl.patch  memchan.patch  snack.patch  tcl-f7fa48.patch  tcl.patch  tclvfs.patch  tk.patch  tkcon.patch  tkimg.patch  tls.patch  trf.patch  winico.patch
