#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.53)
AC_PACKAGE_VERSION(1.1.2)
AC_INIT([Tkabber-pack], 1.1.2, [], [])

# Checks for programs.
AC_PROG_MAKE_SET

AC_OUTPUT([info-after-ru.txt info-after-en.txt Makefile src/defs/defs.mak])
